yaml/php-apache-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-apache-clusterip
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: php-apache
