yaml/php-apache-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-apache-service
spec:
  type: LoadBalancer  # Crea un balanceador de carga AWS
  ports:
    - name: http
      port: 80        # Puerto expuesto externamente
      targetPort: 80  # Puerto del contenedor
  selector:
    app: php-apache   # Selecciona pods con esta etiqueta
