yaml/php-apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-apache-service
spec:
  type: LoadBalancer
  selector:
    app: php-apache
  ports:    
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 80
