yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywall-eks-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: mywall-eks.work.gd
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: php-apache-service
            port:
              number: 80
  tls:
  - hosts:
    - mywall-eks.work.gd
    secretName: mywall-eks-tls

# kubectl apply -f ingress.yaml
